Fix lines falling between the cracks in extract (calling rasterzeLines): https://stat.ethz.ch/pipermail/r-sig-geo/2014-May/020973.html
Better handling of NA values in 1 byte raster files

--- current version
testthat unit tests introduced by Mike Sumner and Jakub Nowosad
as.character() for Raster objects to create the R code to re-create the Raster skeleton in examples.

Bug fixes:
fixed the link for GADM countries download. Bug reported by Loic Dutrieux
fixed corner-case bug in alignExtent (for a small extent, touching a grid cell), affecting crop; reported by 
Judith Mourant and Paul Fenimore
fixed problem with subs reported by Andy Craig https://github.com/rspatial/raster/issues/17

--- 16-Oct-2018, version: 2.7-15
faster extraction for points via GDAL
faster rasterization of polygons

Bug fixes:
buffer did not work with values in memory. Bug reported and solution proposed by Carlos Alberto Arnillas
extract with point and smaller single cell buffer failed when an aggregation function was provided. Reported by Lucas
https://stackoverflow.com/questions/52335522/r-why-does-raster-extract-give-dim-error/52338639#52338639
 

--- 11-Nov-2017, version: 2.6-6
New:
new extent objects created from a vector of coordinates are now checked for being valid. Suggested by Mike Sumner
buffer for lon/lat points
erase for SpatialLines with Polygons
kernelDensity function (hidden)
output from freq is always ordered (whether computed from disk or from in memory values). Requested by Benjamin Leutner

Bug fixes:
as.data.frame from file based rasters ingored na.rm=TRUE (unless xy=TRUE). Reported by Jean-Gabriel Elie
getValuesBlock with lyrs argument. Reported by Antoine Stevens
In approxNA with large files NAs were ignored and the NArule was ignored. Reported by Pablo Timoner
isValid(raster()) failed. Reported by dww on http://stackoverflow.com/questions/37869271/how-to-dput-a-raster/37871930
zapply passes on ... arguments to stackApply